--- a/Euclidean Algorithm/EuclideanDataGenerator.ipynb
+++ b/Euclidean Algorithm/EuclideanDataGenerator.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0a1d0060-1831-4161-b525-5093aad37a0b",
    "metadata": {
     "tags": []
@@ -31,26 +31,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "88988924-987a-4f15-af6c-db4cc95bf873",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "num_data_points = 10000\n",
+    "num_train_points = 10000\n",
     "\n",
     "\n",
     "# Open the CSV file in write mode\n",
-    "with open('data.csv', 'w', newline='') as csvfile:\n",
+    "with open('trainData.csv', 'w', newline='') as csvfile:\n",
     "    # Create a CSV writer object\n",
     "    csv_writer = csv.writer(csvfile)\n",
     "\n",
-    "    # Write the header row\n",
-    "    csv_writer.writerow(['a', 'b', 'Classification'])\n",
+    "    # Generate data points and write them to the CSV\n",
+    "    for i in range(num_train_points):\n",
+    "        a = random.randint(1, 1000)\n",
+    "        b = random.randint(1, 1000)\n",
+    "        if a < b: classification = 1\n",
+    "        else: classification = 0\n",
+    "        \n",
+    "\n",
+    "        # Write the data row to the CSV\n",
+    "        csv_writer.writerow([a, b, classification])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "00f7d51c-7165-4989-a97e-b0518d4687ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_test_points = 2000\n",
+    "\n",
+    "with open('testData.csv', 'w', newline='') as csvfile:\n",
+    "    # Create a CSV writer object\n",
+    "    csv_writer = csv.writer(csvfile)\n",
     "\n",
     "    # Generate data points and write them to the CSV\n",
-    "    for i in range(num_data_points):\n",
+    "    for i in range(num_test_points):\n",
     "        a = random.randint(1, 1000)\n",
     "        b = random.randint(1, 1000)\n",
     "        if a < b: classification = 1\n",
@@ -64,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f7d51c-7165-4989-a97e-b0518d4687ae",
+   "id": "af221c7e-2947-4271-b7fe-57adea0ea1ae",
    "metadata": {},
    "outputs": [],
    "source": []
