by right i meant left

--- a/Euclidean Algorithm.ipynb
+++ b/Euclidean Algorithm.ipynb
@@ -96,7 +96,7 @@
     "        r = a % b\n",
     "    else: return 0\n",
     "    while r != 0:\n",
-    "        a = b # everything shifts to the right \n",
+    "        a = b # everything shifts to the left \n",
     "        b = r\n",
     "        r = a % b\n",
     "    return b #should be the gcd \n",
