there are erros but tried to start training

--- a/First NN.ipynb
+++ b/First NN.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "#data_generator\n",
@@ -61,7 +61,7 @@
     "    return data\n",
     "\n",
     "#https://stackoverflow.com/questions/36158058/torch-save-tensor-to-csv-file#:~:text=For%20simple%20tables%2C%20you%20can,then%20to%20a%20Pandas%20dataframe.&text=You%20can%20first%20convert%20the,table%20as%20a%20csv%20file.\n",
-    "data = data_generator(30)\n",
+    "data = data_generator(100)\n",
     "data_table = data.numpy()\n",
     "df = pandas.DataFrame(data_table)\n",
     "df.to_csv(\"generated_pairs.csv\", index = False) \n"
@@ -69,15 +69,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T12:36:52.246042Z",
-     "start_time": "2023-09-19T12:36:52.221329Z"
+     "end_time": "2023-09-19T13:26:36.194554Z",
+     "start_time": "2023-09-19T13:26:34.051750Z"
     }
    },
    "id": "aa5747831462be81"
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
@@ -96,11 +96,103 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T12:49:55.525640Z",
-     "start_time": "2023-09-19T12:49:55.108296Z"
+     "end_time": "2023-09-19T13:26:38.180234Z",
+     "start_time": "2023-09-19T13:26:38.147373Z"
     }
    },
    "id": "8f208516537858f3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [],
+   "source": [
+    "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
+    "#making the model \n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(2, 128), #first layer 128\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(128,64), #second layer 64\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(64, 16), #third layer 16\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(16,1), #singular output \n",
+    "    nn.Softmax()\n",
+    ")\n",
+    "#print(model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-19T13:26:39.590145Z",
+     "start_time": "2023-09-19T13:26:39.555893Z"
+    }
+   },
+   "id": "b677c06c3dfca538"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [],
+   "source": [
+    "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
+    "#prep for training \n",
+    "loss_function = nn.BCELoss() #should this be our loss function too? \n",
+    "optimizer = optim.Adam(model.parameters(), lr = 0.001); #chose Adam and lr from site \n",
+    "\n",
+    "#split training and testing data \n",
+    "train, test = torch.utils.data.random_split(x, [0.75, 0.25]) #from cs544 class notes \n",
+    "#I know that I am going to run into problems here because I split the input and output so somehow I have to recover the split in order to have the expected results "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-19T13:26:40.657745Z",
+     "start_time": "2023-09-19T13:26:40.632321Z"
+    }
+   },
+   "id": "c1c3c4eff075ec70"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Subset' object has no attribute 'get_shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[54], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m train_rows, train_col \u001B[38;5;241m=\u001B[39m \u001B[43mtrain\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_shape\u001B[49m() \n\u001B[1;32m      2\u001B[0m num_epochs \u001B[38;5;241m=\u001B[39m train_rows\n\u001B[1;32m      3\u001B[0m batch_size \u001B[38;5;241m=\u001B[39m num_epochs \u001B[38;5;241m/\u001B[39m \u001B[38;5;241m10\u001B[39m  \u001B[38;5;66;03m#this is going to run into problems b/c the last one won't have 10 \u001B[39;00m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Subset' object has no attribute 'get_shape'"
+     ]
+    }
+   ],
+   "source": [
+    "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
+    "train_rows, train_col = train.get_shape() \n",
+    "num_epochs = train_rows\n",
+    "batch_size = num_epochs / 10  #this is going to run into problems b/c the last one won't have 10 \n",
+    "for epoch in range(n_epochs):\n",
+    "    for i in range(0, len(train), batch_size):\n",
+    "        train_batch = train[i:i+batch_size]\n",
+    "        y_pred = model(train_batch)\n",
+    "        y_batch = y[i:i+batch_size]\n",
+    "        loss = loss_fn(y_pred, y_batch)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    print(f'Finished epoch {epoch}, latest loss {loss}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-19T13:33:23.598727Z",
+     "start_time": "2023-09-19T13:33:23.472653Z"
+    }
+   },
+   "id": "a6caa7a2eeb42a03"
   },
   {
    "cell_type": "code",
@@ -110,7 +202,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "b677c06c3dfca538"
+   "id": "49db5277992e3403"
   }
  ],
  "metadata": {
