redid dataloader but still have errors trying to run model

--- a/First NN.ipynb
+++ b/First NN.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "import numpy\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn \n",
     "import torch.optim as optim\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
@@ -85,19 +86,20 @@
     "#https://www.w3schools.com/python/numpy/numpy_array_join.asp#:~:text=Joining%20Arrays%20Using%20Stack%20Functions&text=We%20can%20concatenate%20two%201,it%20is%20taken%20as%200.\n",
     "\n",
     "#make tensors from csv file\n",
-    "dataset = np.genfromtxt(\"generated_pairs.csv\", dtype = float, names=True, delimiter=\",\")\n",
-    "a = dataset['0'] #arry of all the a's\n",
-    "b = dataset['1'] #array of all the b's\n",
-    "pairs = np.stack((a,b),axis=1)\n",
-    "x = torch.tensor(pairs, dtype = torch.float64) #input to a tensor\n",
-    "first_move = dataset['2'] #array of all the first moves (0 or 1)\n",
-    "y = torch.tensor(first_move, dtype = torch.float64) #output to a tensor \n"
+    "\n",
+    "#from cs544 notes \n",
+    "data = pd.read_csv(\"generated_pairs.csv\", names=[\"0\",\"1\",\"2\"], delimiter=\",\")\n",
+    "dataset = torch.utils.data.TensorDataset(\n",
+    "    torch.tensor(data.loc[:, \"0\":\"1\"].values), # input \n",
+    "    torch.tensor(data.loc[:, [\"2\"]].values) #output \n",
+    ")\n",
+    "X, Y = dataset[:] #label input and output "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T13:26:38.180234Z",
-     "start_time": "2023-09-19T13:26:38.147373Z"
+     "end_time": "2023-09-19T17:45:05.902873Z",
+     "start_time": "2023-09-19T17:45:05.888650Z"
     }
    },
    "id": "8f208516537858f3"
@@ -132,53 +134,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
     "#prep for training \n",
     "loss_function = nn.BCELoss() #should this be our loss function too? \n",
-    "optimizer = optim.Adam(model.parameters(), lr = 0.001); #chose Adam and lr from site \n",
+    "optimizer = optim.Adam(model.parameters(), lr = 0.001) #chose Adam and lr from site \n",
     "\n",
     "#split training and testing data \n",
-    "train, test = torch.utils.data.random_split(x, [0.75, 0.25]) #from cs544 class notes \n",
-    "#I know that I am going to run into problems here because I split the input and output so somehow I have to recover the split in order to have the expected results "
+    "train, test = torch.utils.data.random_split(dataset, [0.75, 0.25]) #from cs544 class notes "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T13:26:40.657745Z",
-     "start_time": "2023-09-19T13:26:40.632321Z"
+     "end_time": "2023-09-19T17:45:08.017562Z",
+     "start_time": "2023-09-19T17:45:08.013148Z"
     }
    },
    "id": "c1c3c4eff075ec70"
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
+   "outputs": [],
+   "source": [
+    "batch_s = 5 #batch size \n",
+    "epoch_s = int(100*0.75) #epoch size \n",
+    "dl = torch.utils.data.DataLoader(train, batch_size = batch_s, shuffle = True) #from cs544 notes \n",
+    "dl_test = torch.utils.data.DataLoader(test, batch_size = batch_s, shuffle = False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-19T18:02:26.065464Z",
+     "start_time": "2023-09-19T18:02:26.063165Z"
+    }
+   },
+   "id": "a6caa7a2eeb42a03"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Subset' object has no attribute 'get_shape'",
+     "ename": "TypeError",
+     "evalue": "linear(): argument 'input' (position 1) must be Tensor, not bool",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[54], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m train_rows, train_col \u001B[38;5;241m=\u001B[39m \u001B[43mtrain\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_shape\u001B[49m() \n\u001B[1;32m      2\u001B[0m num_epochs \u001B[38;5;241m=\u001B[39m train_rows\n\u001B[1;32m      3\u001B[0m batch_size \u001B[38;5;241m=\u001B[39m num_epochs \u001B[38;5;241m/\u001B[39m \u001B[38;5;241m10\u001B[39m  \u001B[38;5;66;03m#this is going to run into problems b/c the last one won't have 10 \u001B[39;00m\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Subset' object has no attribute 'get_shape'"
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[91], line 5\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m0\u001B[39m, \u001B[38;5;28mlen\u001B[39m(X), batch_s):\n\u001B[1;32m      4\u001B[0m     x_batch \u001B[38;5;241m=\u001B[39m X \u001B[38;5;129;01min\u001B[39;00m dl\n\u001B[0;32m----> 5\u001B[0m     y_pred \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx_batch\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      6\u001B[0m     y_batch \u001B[38;5;241m=\u001B[39m Y \u001B[38;5;129;01min\u001B[39;00m dl\n\u001B[1;32m      7\u001B[0m     loss \u001B[38;5;241m=\u001B[39m loss_fn(y_pred, y_batch)\n",
+      "File \u001B[0;32m~/PycharmProjects/MXM_practice/venv/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1496\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[1;32m   1497\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[1;32m   1498\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks\n\u001B[1;32m   1499\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[1;32m   1500\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[0;32m-> 1501\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mforward_call\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1502\u001B[0m \u001B[38;5;66;03m# Do not call functions when jit is used\u001B[39;00m\n\u001B[1;32m   1503\u001B[0m full_backward_hooks, non_full_backward_hooks \u001B[38;5;241m=\u001B[39m [], []\n",
+      "File \u001B[0;32m~/PycharmProjects/MXM_practice/venv/lib/python3.11/site-packages/torch/nn/modules/container.py:217\u001B[0m, in \u001B[0;36mSequential.forward\u001B[0;34m(self, input)\u001B[0m\n\u001B[1;32m    215\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mforward\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;28minput\u001B[39m):\n\u001B[1;32m    216\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m module \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m:\n\u001B[0;32m--> 217\u001B[0m         \u001B[38;5;28minput\u001B[39m \u001B[38;5;241m=\u001B[39m \u001B[43mmodule\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m    218\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28minput\u001B[39m\n",
+      "File \u001B[0;32m~/PycharmProjects/MXM_practice/venv/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1496\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[1;32m   1497\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[1;32m   1498\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks\n\u001B[1;32m   1499\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[1;32m   1500\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[0;32m-> 1501\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mforward_call\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1502\u001B[0m \u001B[38;5;66;03m# Do not call functions when jit is used\u001B[39;00m\n\u001B[1;32m   1503\u001B[0m full_backward_hooks, non_full_backward_hooks \u001B[38;5;241m=\u001B[39m [], []\n",
+      "File \u001B[0;32m~/PycharmProjects/MXM_practice/venv/lib/python3.11/site-packages/torch/nn/modules/linear.py:114\u001B[0m, in \u001B[0;36mLinear.forward\u001B[0;34m(self, input)\u001B[0m\n\u001B[1;32m    113\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mforward\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;28minput\u001B[39m: Tensor) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Tensor:\n\u001B[0;32m--> 114\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mF\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlinear\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mweight\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbias\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mTypeError\u001B[0m: linear(): argument 'input' (position 1) must be Tensor, not bool"
      ]
     }
    ],
    "source": [
     "#https://machinelearningmastery.com/develop-your-first-neural-network-with-pytorch-step-by-step/\n",
-    "train_rows, train_col = train.get_shape() \n",
-    "num_epochs = train_rows\n",
-    "batch_size = num_epochs / 10  #this is going to run into problems b/c the last one won't have 10 \n",
-    "for epoch in range(n_epochs):\n",
-    "    for i in range(0, len(train), batch_size):\n",
-    "        train_batch = train[i:i+batch_size]\n",
-    "        y_pred = model(train_batch)\n",
-    "        y_batch = y[i:i+batch_size]\n",
+    "for epoch in range(epoch_s):\n",
+    "    for i in range(0, len(X), batch_s):\n",
+    "        x_batch = X in dl\n",
+    "        y_pred = model(x_batch)\n",
+    "        y_batch = Y in dl\n",
     "        loss = loss_fn(y_pred, y_batch)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -188,11 +209,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T13:33:23.598727Z",
-     "start_time": "2023-09-19T13:33:23.472653Z"
+     "end_time": "2023-09-19T18:02:27.856204Z",
+     "start_time": "2023-09-19T18:02:27.735644Z"
     }
    },
-   "id": "a6caa7a2eeb42a03"
+   "id": "49db5277992e3403"
   },
   {
    "cell_type": "code",
@@ -202,7 +223,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "49db5277992e3403"
+   "id": "c734295ca63c2082"
   }
  ],
  "metadata": {
