NN where can take 4 steps

--- a/Euclidean Algorithm/Donald/four_step_euclidean/four_step_generation.ipynb
+++ b/Euclidean Algorithm/Donald/four_step_euclidean/four_step_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,46 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1  1]\n",
-      "[-2  1]\n",
-      "[-2 -1]\n",
-      "[-1 -1]\n",
-      "[ 0 -1]\n",
-      "[ 0 -1]\n",
-      "[-1 -1]\n",
-      "[-1 -2]\n",
-      "[ 1 -2]\n",
-      "[ 3 -2]\n",
-      "[ 3 -5]\n",
-      "[-2 -5]\n",
-      "[-2 -7]\n",
-      "[-9 -7]\n",
-      "[-16  -7]\n",
-      "[-16 -23]\n",
-      "[-39 -23]\n",
-      "[-39  16]\n",
-      "[-39  55]\n",
-      "[16 55]\n",
-      "[16 71]\n",
-      "[16 87]\n",
-      "[103  87]\n",
-      "[190  87]\n",
-      "[ 190 -103]\n",
-      "[ 293 -103]\n",
-      "[293 190]\n",
-      "[103 190]\n",
-      "[103 293]\n",
-      "[103 396]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur_array = np.array([0, 1])\n",
     "\n",
@@ -116,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([103, 396])"
+       "array([-26,   7])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv('four_directions.csv', index=False)"
+    "test_df.to_csv('four_directions_test.csv', index=False)"
    ]
   }
  ],
