improve plotting from a point to the axis

--- a/Euclidean Algorithm/Donald/four_step_euclidean/four_step_generation.ipynb
+++ b/Euclidean Algorithm/Donald/four_step_euclidean/four_step_generation.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import random\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -167,15 +168,6 @@
     "\n",
     "    df2 = pd.DataFrame([[cur_array[0], cur_array[1], remove_undesired[-1]]], columns=['val1', 'val2', 'last_matrix'])\n",
     "    test_df = pd.concat([df2, test_df])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
