robust solution for generating random matrices and training NN

--- a/Euclidean Algorithm/Donald/2_random_matrices/working_seed_42_NN.ipynb
+++ b/Euclidean Algorithm/Donald/2_random_matrices/working_seed_42_NN.ipynb
@@ -1189,10 +1189,7 @@
     "    test_output = trained_model(test_input)\n",
     "\n",
     "    predicted_classes = torch.argmax(test_output, dim=1)\n",
-    "\n",
-    "    test_output_compare = torch.tensor(expected_result, dtype=torch.int)\n",
-    "\n",
-    "    return float(sum(test_output_compare == predicted_classes)/len(test_input))"
+    "    return float(sum(expected_result == predicted_classes)/len(test_input))"
    ]
   },
   {
