--- a/heisenberg_group/Donald/generate_heisenberg_data.ipynb
+++ b/heisenberg_group/Donald/generate_heisenberg_data.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv('heisenberg_data_test.csv', index=False)"
+    "test_df.to_csv('heisenberg_data.csv', index=False)"
    ]
   }
  ],
