--- a/heisenberg_group/Donald/Q_learning_to_origin.ipynb
+++ b/heisenberg_group/Donald/Q_learning_to_origin.ipynb
@@ -29,43 +29,21 @@
     "    else:\n",
     "        # get the best move for the current state\n",
     "        return best_move_for_a_state(Q_table=qtable, state=state)\n",
-    "\n",
+    "    \n",
+    "# I would like to return the best move for a given state\n",
     "def best_move_for_a_state(Q_table, state):\n",
-    "    # candidates = []\n",
-    "    # vals = []\n",
-    "\n",
     "    vals = Q_table[str(state)]\n",
+    "\n",
+    "    # if we haven't visited this state before, return a random choice of 0, 1, 2, or 3\n",
     "    if vals==[0, 0, 0, 0]:\n",
     "        return random.choice([0, 1, 2, 3])\n",
+    "    \n",
+    "    # if we have visited this state before, return the current best choice\n",
     "    return np.argmax(vals)\n",
     "\n",
-    "    # I would like to return the best move for a given state\n",
-    "    # for i in Q_table:\n",
-    "    #     if i[0] == str(state):\n",
-    "    #         candidates.append(i)\n",
-    "    #         vals.append(Q_table[i])\n",
-    "    # if vals:\n",
-    "    #     return candidates[np.argmax(vals)][1]\n",
-    "    # if we don't have any values in our q-table for this state, just return a random action\n",
-    "\n",
+    "# over a given state, return the maximum value of the table for that state\n",
     "def max_a_prime(Q_table, state):\n",
-    "    return max(Q_table[str(state)])\n",
-    "    # candidates = []\n",
-    "    # vals = []\n",
-    "\n",
-    "    # # I would like to return the maximum value of Q(s', a') over all possible a' values\n",
-    "    # # TODO I think I can make this more efficient. \n",
-    "    # for i in Q_table:\n",
-    "    #     if i[0] == str(state):\n",
-    "    #         candidates.append(i)\n",
-    "    #         vals.append(Q_table[i])\n",
-    "    #         print(Q_table[i])\n",
-    "    # print(candidates)\n",
-    "    # print(vals)\n",
-    "    \n",
-    "    # if vals:\n",
-    "    #     return Q_table[candidates[np.argmax(vals)]]\n",
-    "    # return 0"
+    "    return max(Q_table[str(state)])"
    ]
   },
   {
@@ -92,16 +70,10 @@
    "outputs": [],
    "source": [
     "def getReward(matrix):\n",
-    "    if matrix[0][1]==1 and matrix[0][2]==0 and matrix[1][2]==0:\n",
-    "        return 20\n",
-    "    elif matrix[0][1]==0 and matrix[0][2]==0 and matrix[1][2]==1:\n",
-    "        return 20\n",
-    "    elif matrix[0][1]==-1 and matrix[0][2]==0 and matrix[1][2]==0:\n",
-    "        return 20\n",
-    "    elif matrix[0][1]==0 and matrix[0][2]==0 and matrix[1][2]==-1:\n",
+    "    if (matrix==A).all() or (matrix==B).all() or (matrix==C).all() or (matrix==D).all():\n",
     "        return 20\n",
     "    else:\n",
-    "        return 1/(1 + 8*(matrix[0][1] + matrix[0][2] + matrix[1][2]))"
+    "        return 1/(2 + 8*(matrix[0][1] + matrix[0][2] + matrix[1][2]))"
    ]
   },
   {
@@ -547,7 +519,7 @@
     }
    ],
    "source": [
-    "# adapted from CS 540 HW 10\n",
+    "# adapted from CS 540 Spring 2023 HW 10\n",
     "EPISODES = 20000\n",
     "LEARNING_RATE = .1\n",
     "DISCOUNT_FACTOR = .99\n",
@@ -590,8 +562,8 @@
     "        episode_reward += reward # update episode reward\n",
     "\n",
     "        index += 1\n",
-    "        # if we take more than 40 steps, end this iteration early (we are probably not making progress)\n",
-    "        if index > 40:\n",
+    "        # if we take more than 100 steps, end this iteration early (we are probably not making progress)\n",
+    "        if index > 100:\n",
     "            done=True\n",
     "\n",
     "    # decay the epsilon\n",
@@ -624,6 +596,147 @@
    ],
    "source": [
     "Q_table[str(B@B)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test with the other dataframe. \n",
+    "test_df = pd.read_csv(\"heisenberg_data_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df\n",
+    "cur_row = test_df.sample(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur_matrix = np.array([[1, int(cur_row['val1']), int(cur_row['val2'])], [0, 1, int(cur_row['val3'])], [0, 0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 1],\n",
+       "       [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs = Q_table[str(cur_matrix)]\n",
+    "if outputs==[0, 0, 0, 0]:\n",
+    "    print(\"Problem.\")\n",
+    "index = np.argmax(outputs)\n",
+    "new_matrix = cur_matrix\n",
+    "if index==0:\n",
+    "    new_matrix = cur_matrix @ A\n",
+    "elif index==1:\n",
+    "    new_matrix = cur_matrix @ B\n",
+    "elif index==2:\n",
+    "    new_matrix = cur_matrix @ C\n",
+    "elif index==3:\n",
+    "    new_matrix = cur_matrix @ D\n",
+    "\n",
+    "cur_matrix = new_matrix\n",
+    "new_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_to_num_steps(cur_matrix):\n",
+    "    index = 1\n",
+    "    for i in range(50):\n",
+    "        if (cur_matrix==A).all() or (cur_matrix==B).all() or (cur_matrix==C).all() or (cur_matrix==D).all():\n",
+    "            return i\n",
+    "        outputs = Q_table[str(cur_matrix)]\n",
+    "        print(outputs)\n",
+    "        if outputs==[0, 0, 0, 0]:\n",
+    "            # this is a problem because we haven't seen this state before \n",
+    "            # in training so we have no idea how to handle it\n",
+    "            print(\"Problem.\")\n",
+    "        index = np.argmax(outputs)\n",
+    "        if index==0:\n",
+    "            cur_matrix = cur_matrix @ A\n",
+    "        elif index==1:\n",
+    "            cur_matrix = cur_matrix @ B\n",
+    "        elif index==2:\n",
+    "            cur_matrix = cur_matrix @ C\n",
+    "        elif index==3:\n",
+    "            cur_matrix = cur_matrix @ D\n",
+    "    return 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[25.583184431976477, 0, -0.006666666666666667, -0.006666666666666667]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_table[str(B@B@C@A)]\n",
+    "\n",
+    "# cur_matrix = D@D@B@D@A\n",
+    "\n",
+    "# matrix_to_num_steps(B@B@C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  0, -2],\n",
+       "       [ 0,  1,  1],\n",
+       "       [ 0,  0,  1]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B@B@C@A@A"
    ]
   }
  ],
