--- a/heisenberg_group/Donald/heisenberg_NN_Q_learning.ipynb
+++ b/heisenberg_group/Donald/heisenberg_NN_Q_learning.ipynb
@@ -1243,7 +1243,16 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# plot a vizualization of what we would predict for a bunch of ordered pairs\n",
     "\n",
