--- a/heisenberg_group/Donald/Q_learning_to_origin.ipynb
+++ b/heisenberg_group/Donald/Q_learning_to_origin.ipynb
@@ -1925,6 +1925,146 @@
     "print(Q_table[matrix_to_tuple(A@C@C@C@C@B@D@B@D@C@C)])\n",
     "print(Q_table[matrix_to_tuple(A@C@C@C@C@B@D@B@D@C@D)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 457,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem_cases = test_df[test_df['num_moves_Q_learning_needs']==100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 488,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_row = problem_cases.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 489,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_mat = np.array([[1, first_row['val1'], first_row['val2']], [0, 1, first_row['val3']], [0, 0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_to_next_matrix(mat):\n",
+    "    outputs = [0, 0, 0, 0]\n",
+    "\n",
+    "    outputs[0] = Q_table[matrix_to_tuple(mat@ A)]\n",
+    "    outputs[1] = Q_table[matrix_to_tuple(mat@ B)]\n",
+    "    outputs[2] = Q_table[matrix_to_tuple(mat@ C)]\n",
+    "    outputs[3] = Q_table[matrix_to_tuple(mat@ D)]\n",
+    "\n",
+    "    index = np.argmax(outputs)\n",
+    "    if index==0:\n",
+    "        cur_matrix = mat @ A\n",
+    "    elif index==1:\n",
+    "        cur_matrix = mat @ B\n",
+    "    elif index==2:\n",
+    "        cur_matrix = mat @ C\n",
+    "    elif index==3:\n",
+    "        cur_matrix = mat @ D\n",
+    "\n",
+    "    \n",
+    "    return cur_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 506,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_we_loop(seen, matrix):\n",
+    "    for i in range(20):\n",
+    "        seen.add(matrix_to_tuple(matrix))\n",
+    "        matrix = matrix_to_next_matrix(matrix)\n",
+    "        if matrix_to_tuple(matrix) in seen: \n",
+    "            return True\n",
+    "            # return (matrix, i)\n",
+    "    # return \"We do not loop\"\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 507,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 507,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seen = set()\n",
+    "do_we_loop(seen, test_mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\16089\\AppData\\Local\\Temp\\ipykernel_20656\\2113995181.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  problem_cases['do_we_loop'] = problem_cases.apply(add_if_loop_to_df, axis=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_if_loop_to_df(row): \n",
+    "    test_mat = np.array([[1, row['val1'], row['val2']], [0, 1, row['val3']], [0, 0, 1]])\n",
+    "    seen = set()\n",
+    "    return do_we_loop(seen, test_mat)\n",
+    "problem_cases['do_we_loop'] = problem_cases.apply(add_if_loop_to_df, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 509,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9865689865689866"
+      ]
+     },
+     "execution_count": 509,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(problem_cases['do_we_loop'])/problem_cases.shape[0]\n",
+    "# we almost always loop within 20 moves"
+   ]
   }
  ],
  "metadata": {
