NN from Q learning on example points

--- a/heisenberg_group/Donald/heisenberg_NN_Q_learning.ipynb
+++ b/heisenberg_group/Donald/heisenberg_NN_Q_learning.ipynb
@@ -1384,6 +1384,72 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# B is the inverse of A\n",
+    "A = np.array([[1, 1, 0], [0, 1, 0], [0, 0, 1]])\n",
+    "B = np.array([[1, -1, 0], [0, 1, 0], [0, 0, 1]])\n",
+    "\n",
+    "# C is the inverse of D\n",
+    "C = np.array([[1, 0, 0], [0, 1, 1], [0, 0, 1]])\n",
+    "D = np.array([[1, 0, 0], [0, 1, -1], [0, 0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how long does it take us to get back to the origin? \n",
+    "def matrix_to_tuple(matrix):\n",
+    "    return (matrix[0][1], matrix[0][2], matrix[1][2])\n",
+    "\n",
+    "def num_steps_to_origin_w_nn(test_mat):\n",
+    "    for i in range(100):\n",
+    "\n",
+    "        if (test_mat==A).all() or (test_mat==B).all() or (test_mat==C).all() or (test_mat==D).all():\n",
+    "            return i\n",
+    "        demo_test_type = torch.tensor([matrix_to_tuple(test_mat)], dtype=torch.float32)\n",
+    "        action = int(torch.argmax(trained_model(demo_test_type)))\n",
+    "\n",
+    "        if action==0:\n",
+    "            test_mat = test_mat @ A\n",
+    "        elif action==1:\n",
+    "            test_mat = test_mat @ B\n",
+    "        elif action==2:\n",
+    "            test_mat = test_mat @ C\n",
+    "        else:\n",
+    "            test_mat = test_mat @ D\n",
+    "\n",
+    "    return 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_mat = np.array([[1, 20, 0], [0, 1, 0], [0, 0, 1]])\n",
+    "num_steps_to_origin_w_nn(test_mat)"
+   ]
   }
  ],
  "metadata": {
